2014-03-26  Julien Bect  <julien.bect@supelec.fr>

	stk_param_relik: Adding a little bit of noise to help chol succeed.

	* paramestim/stk_param_relik.m: Add a little bit of noise to help
	chol succeed, when the first factorization returned by chol is not
	complete. Emit a warning when doing so.
	* config/stk_config_setup.m: By default, hide the warning emitted
	by stk_param_relik.

2014-03-25  Julien Bect  <julien.bect@supelec.fr>

	stk_config_addpath: Add MOLE subdirectories to the path.

	* config/stk_config_addpath.m: modified

	stk_version: Simpler is better.

	* config/stk_version.m: Moved...
	* stk_version.m: ...here. STK's version number is now hard-coded
	in this file, and read from README anymore.
	* README: Refer to stk_version.m for the version number.
	* config/stk_config_path.m: Add STK's root to the path unless STK
	is used as an Octave package.
	* etc/RELEASE_CHECKLIST: Related changes.

	stk_config_getroot: Simpler is better.

	* config/stk_config_getroot.m: Simplify the way we locate STK's
	root. Use stk_param_relik instead of stk_test as a reference, as
	stk_test will probably not be included in the Octave package.
	* admin/make_octave_package.m: Modified.

	stk_make_htmldoc: Remove dependency on stk_config_getroot.

	* admin/stk_make_htmldoc.m: modified.

	stk_param_relik: Improved implementation, or so I hope.

	* paramestim/stk_param_relik.m: Several modifications, that seem
	to reduce the number of warnings related to bad conditioning, and
	also improve the performance for large n (about 1000, say).

	Fix minor problems in stk_config_rmpath and stk_config_path.

	* config/stk_config_path.m: modified
	* config/stk_config_rmpath.m: modified

	Test examples using stk_runtests instead of stk_runexamples.

	* examples/01_kriging_basics/stk_example_kb01.m: add %!test
	* examples/01_kriging_basics/stk_example_kb02.m: add %!test
	* examples/01_kriging_basics/stk_example_kb03.m: add %!test
	* examples/01_kriging_basics/stk_example_kb04.m: add %!test