@@ -47,10 +47,12 @@ if (exist ('OCTAVE_VERSION', 'builtin') == 5), % if Octave
     recursive_rmdir_state = confirm_recursive_rmdir (0);
 end
 
+opts = {MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED};
+
 
 %--- isoctave -----------------------------------------------------------------
 
-install_mole_function ('isoctave', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED);
+install_mole_function ('isoctave', mole_dir, opts{:});
 
 % Note: if MOLE_DO_ADDPATH is false, isoctave is not added to the search
 % path. Therefore, it cannot be assumed below that isoctave is defined.
@@ -70,6 +72,16 @@ elseif MOLE_PRUNE_UNUSED,
 end
 
 
+%--- graphics_toolkit ---------------------------------------------------------
+
+% For Octave users: graphics_toolkit is missing in some old version of Octave
+
+% For Matlab users: there is no function named graphics_toolkit in Matlab. Our
+% implementation returns either 'matlab-jvm' or 'matlab-nojvm'.
+
+install_mole_function ('graphics_toolkit', mole_dir, opts{:});
+
+
 %--- corr ---------------------------------------------------------------------
 
 % For Octave users: corr belongs to Octave core in recent releases of Octave,
@@ -78,7 +90,7 @@ end
 % For Matlab users: corr is missing from Matlab itself, but it provided by the
 % Statistics toolbox if you're rich enough to afford it.
 
-install_mole_function ('corr', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED);
+install_mole_function ('corr', mole_dir, opts{:});
 
 
 %--- linsolve -----------------------------------------------------------------
@@ -86,7 +98,7 @@ install_mole_function ('corr', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED);
 % For Octave users: linsolve has been missing in Octave for a long time
 % (up to 3.6.4)
 
-install_mole_function ('linsolve', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED);
+install_mole_function ('linsolve', mole_dir, opts{:});
 
 
 %--- quantile -----------------------------------------------------------------
@@ -94,7 +106,7 @@ install_mole_function ('linsolve', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED)
 % For Matlab users: quantile is missing from Matlab itself, but it provided by
 % the Statistics toolbox if you're rich enough to afford it.
 
-install_mole_function ('quantile', mole_dir, MOLE_DO_ADDPATH, MOLE_PRUNE_UNUSED);
+install_mole_function ('quantile', mole_dir, opts{:});
 
 
 %--- CLEANUP ------------------------------------------------------------------
@@ -104,8 +116,5 @@ cd (here);
 if (exist ('OCTAVE_VERSION', 'builtin') == 5), % is octave
     confirm_recursive_rmdir (recursive_rmdir_state);
 end
-    
-clear mole_dir here MOLE_PRUNE_UNUSED MOLE_DO_ADDPATH recursive_rmdir_state
 
-
-
+clear mole_dir here MOLE_PRUNE_UNUSED MOLE_DO_ADDPATH recursive_rmdir_state opts
